--- a/style.css
+++ b/style.css
@@ -339,7 +339,7 @@ body {
 }
 
 .carousel-slide-1 {
-    background-image: url('/hero_infrastructure.jpg');
+    background-image: url('hero_infrastructure.jpg');
     background-position: right center;
     justify-content: flex-start;
     image-rendering: -webkit-optimize-contrast;
@@ -1783,3 +1783,4 @@ body {
     margin: 20px auto;
 
 }
+
